--- a/gradle.properties
+++ b/gradle.properties
@@ -24,4 +24,4 @@ android.nonTransitiveRClass=true
 
 # Cho phép cài đặt test APK trên thiết bị
 android.injected.testOnly=false
-API_KEY=AIzaSyBbJgjhDfSUefcVV7q6p6SHbH294AC-jBA
+API_KEY=
